Lab/AWS-CFT/Setup-VPC.template
{
    "AWSTemplateFormatVersion": "2010-09-09",

     "Description" : "This Cloud Formation Template creates a lab environment for the F5 Cloud Edition Lab (CEL) **WARNING** This template creates Amazon EC2 instances. You will be billed for the AWS resources used if you create a stack from this template. This template is supplied with no warranty or support.",
    "Description" : "This Cloud Formation Template creates the lab environment for the F5 Cloud Edition lab  **WARNING** This template creates Amazon EC2 instances. You will be billed for the AWS resources used if you create a stack from this template. This template is supplied with no warranty or support.",
    "Parameters": {
        "UserIP": {
            "Description": " The IP address range that can be used to access environment.",
            "Type": "String",
            "MinLength": "9",
            "MaxLength": "18",
            "Default": "0.0.0.0/0",
            "AllowedPattern": "(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})/(\\d{1,2})",
            "ConstraintDescription": "must be a valid IP CIDR range of the form x.x.x.x/x."
        }
    },
    "Resources": {
        "VPC": {
            "Type": "AWS::EC2::VPC",
            "Properties": {
                "CidrBlock": "10.1.0.0/16",
                "InstanceTenancy": "default",
                "EnableDnsSupport": "true",
                "EnableDnsHostnames": "false",
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "CEL-VPC"
                    }
                ]
            }
        },
        "ExternalSubnet": {
            "Type": "AWS::EC2::Subnet",
            "Properties": {
                "CidrBlock": "10.1.2.0/24",
                "VpcId": {
                    "Ref": "VPC"
                },
                "AvailabilityZone" : {
                    "Fn::Select" : [ "0", { "Fn::GetAZs" : "" } ]
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "CLE-ExternalSubnet"
                    }
                ]
            }
        },
        "InternalSubnet": {
            "Type": "AWS::EC2::Subnet",
            "Properties": {
                "CidrBlock": "10.1.10.0/24",
                "VpcId": {
                    "Ref": "VPC"
                },
                "AvailabilityZone" : {
                    "Fn::Select" : [ "0", { "Fn::GetAZs" : "" } ]
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "CLE-InternalSubnet"
                    }
                ]
            }
        },
        "RouteTableInternal": {
            "Type": "AWS::EC2::RouteTable",
            "Properties": {
                "VpcId": {
                    "Ref": "VPC"
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "CLE-RouteInternal"
                    }
                ]
            }
        },
        "RouteTableExternal": {
            "Type": "AWS::EC2::RouteTable",
            "Properties": {
                "VpcId": {
                    "Ref": "VPC"
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "CLE-RouteExternal"
                    }
                ]
            }
        },
        "InternalSubnetRouteTableAssociation": {
            "Type": "AWS::EC2::SubnetRouteTableAssociation",
            "Properties": {
                "SubnetId": {
                    "Ref": "InternalSubnet"
                },
                "RouteTableId": {
                    "Ref": "RouteTableInternal"
                }
            }
        },
        "ExternalSubnetRouteTableAssociation": {
            "Type": "AWS::EC2::SubnetRouteTableAssociation",
            "Properties": {
                "SubnetId": {
                    "Ref": "ExternalSubnet"
                },
                "RouteTableId": {
                    "Ref": "RouteTableExternal"
                }
            }
        },
        "NatEIP": {
            "Type": "AWS::EC2::EIP",
            "Properties": {
                "Domain":"vpc"
            }

        },
        "IGW": {
            "Type": "AWS::EC2::InternetGateway",
            "Properties": {
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "CLE-IG"
                    }
                ]
            }
        },
        "NatGW": {
            "Type": "AWS::EC2::NatGateway",
            "Properties": {
                "AllocationId": {
                    "Fn::GetAtt": [
                        "NatEIP",
                        "AllocationId"
                    ]
                },
                "SubnetId": {
                    "Ref": "ExternalSubnet"
                }
            }
        },
        "IGWAttachment": {
            "Type": "AWS::EC2::VPCGatewayAttachment",
            "Properties": {
                "VpcId": {
                    "Ref": "VPC"
                },
                "InternetGatewayId": {
                    "Ref": "IGW"
                }
            }
        },
        "RouteInternalDefault": {
            "Type": "AWS::EC2::Route",
            "Properties": {
                "DestinationCidrBlock": "0.0.0.0/0",
                "RouteTableId": {
                    "Ref": "RouteTableInternal"
                },
                "NatGatewayId": {
                    "Ref": "NatGW"
                }
            }
        },
        "RouteExternalDefault": {
            "Type": "AWS::EC2::Route",
            "Properties": {
                "DestinationCidrBlock": "0.0.0.0/0",
                "RouteTableId": {
                    "Ref": "RouteTableExternal"
                },
                "GatewayId": {
                    "Ref": "IGW"
                }
            },
            "DependsOn": "IGWAttachment"
        },
        "VPCAcl": {
            "Type": "AWS::EC2::NetworkAcl",
            "Properties": {
                "VpcId": {
                    "Ref": "VPC"
                }
            }
        },
    },
    "Outputs": {
        "VpcId" : {
          "Description" : "VPC ID",
          "Value" : {"Ref": "VPC"}
        },
        "InternalSubnetId" : {
          "Description" : "Internal Subnet ID",
          "Value" : {"Ref": "InternalSubnet"}
        },
        "ExternalSubnetId" : {
          "Description" : "External Subnet ID",
          "Value" : {"Ref": "ExternalSubnet"}
        }
    }
}
